everything is pretty much placed

--- a/index.html
+++ b/index.html
@@ -1,8 +1,44 @@
-<html>
-    <head>
-        <title title="google homepage"></title>
-    </head>
-    <body>
-
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google Homepage</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="upbar">
+        <div id="upleft">
+            <a href="#">About</a>
+            <a href="#">Store</a>
+        </div>
+        <div id="upright">
+            <a href="#">Gmail</a>
+            <a href="#">Images</a>
+            <a href="#">Apps</a>
+            <button>Sign In</button>
+        </div>
+            
+    </div>
+    <div class="search">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
+        <div class="searchBar">
+            <input type="text" id="seaBar">
+        </div>
+        <div class="underBar">
+            <button class="tombol" id="lefttomb">Google Search</button>
+            <button class="tombol">I'm Feeling Lucky</button>
+        </div>
+    </div>
+    <div id="buttom">
+        <div id="butleft">
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">How Search works</a>
+        </div>
+        <div id="butright">
+            <a href="#">Privacy</a>
+        </div>
+    </div>
+</body>
 </html>
